# GDUT-26rc-Vision

./: README.md
jhap/: install.sh
py2_ws/src/ecat_controllers/chassis_controller/: CMakeLists.txt  omni_chassis_controller_plugins.xml  package.xml  swerve_chassis_controller_plugins.xml  wujia_plugins.xml
py2_ws/src/ecat_controllers/chassis_controller/config/: omni_config.yaml  swerve_config.yaml  wujia.yaml
py2_ws/src/ecat_controllers/chassis_controller/include/chassis_controller/: OmniChassisController.h  SwerveChassisController.h  wujiaController.h
py2_ws/src/ecat_controllers/chassis_controller/src/: .OmniChassisController.cpp.swn  .OmniChassisController.cpp.swo  .OmniChassisController.cpp.swp  OmniChassisController.cpp  SwerveChassisController.cpp  wujiaController.cpp
py2_ws/src/ecat_controllers/ops9_controller/: CMakeLists.txt  ops9_controller_plugins.xml  package.xml
py2_ws/src/ecat_controllers/ops9_controller/config/: template_ops9.yaml
py2_ws/src/ecat_controllers/ops9_controller/include/ops9_controller/: Ops9Controller.h
py2_ws/src/ecat_controllers/ops9_controller/src/: Ops9Controller.cpp
py2_ws/src/ecat_controllers/upperboard_controller/: CMakeLists.txt  package.xml  upperboard_controller_plugins.xml
py2_ws/src/ecat_controllers/upperboard_controller/config/: upperboard_template.yaml
py2_ws/src/ecat_controllers/upperboard_controller/include/upperboard_controller/: UpperboardController.h
py2_ws/src/ecat_controllers/upperboard_controller/src/: UpperboardController.cpp
py2_ws/src/imu_hw/: CMakeLists.txt  package.xml
py2_ws/src/imu_hw/config/: imu_config.yaml
py2_ws/src/imu_hw/include/imu_hw/: ImuHW.h
py2_ws/src/imu_hw/launch/: imu_hw_node.launch
py2_ws/src/imu_hw/src/: ImuHW.cpp  imu_hw_node.cpp
py2_ws/src/localization_interface/: CMakeLists.txt  package.xml
py2_ws/src/localization_interface/config/: sensor.yaml
py2_ws/src/localization_interface/config/rviz/: rc25.rviz
py2_ws/src/localization_interface/include/localization_interface/: PubOdom.h
py2_ws/src/localization_interface/launch/: pub_map.launch  pub_odom_node.launch  test_pub_odom_node.launch
py2_ws/src/localization_interface/maps/: rc25.pgm  rc25.yaml
py2_ws/src/localization_interface/src/: PubOdom copy.cpp  PubOdom.cpp  PubOdom_copy_2.cpp  pub_odom_node.cpp  test_pub_odom_node.cpp
py2_ws/src/motion_planning/: CMakeLists.txt  package.xml
py2_ws/src/node_monitor/: CMakeLists.txt  package.xml
py2_ws/src/node_monitor/launch/: restart_all_master.launch
py2_ws/src/node_monitor/scripts/: restart_all_master.sh  restart_controller_master.sh  restart_dribble_node.sh  restart_ethercat_master.sh  restart_pub_odom.sh  restart_radio_remote.sh  stop_controller_master.sh  stop_ethercat_master.sh
py2_ws/src/node_monitor/src/: monitor_node.cpp
py2_ws/src/position_sensor/: CMakeLists.txt  package.xml
py2_ws/src/position_sensor/config/: position_protocol.yaml
py2_ws/src/position_sensor/include/position_sensor/: PositionSensorHW.h
py2_ws/src/position_sensor/launch/: position_sensor_hw_node.launch
py2_ws/src/position_sensor/src/: PositionSensorHW.cpp  position_sensor_hw_node.cpp
py2_ws/src/rc_ecat_master/: CMakeLists.txt  package.xml
py2_ws/src/rc_ecat_master/config/: actuator_coeff.yaml  controller.yaml  joint_limits.yaml  test_hw.yaml
py2_ws/src/rc_ecat_master/config/controller/: defense_config.yaml  kobe_controllers.yaml  launch_config.yaml  omni_config.yaml  swerve_config.yaml  test_2006_controllers.yaml  test_md4219_controllers.yaml  wujia_controllers.yaml
py2_ws/src/rc_ecat_master/config/ecat/: kobe_ecat_config.yaml
py2_ws/src/rc_ecat_master/config/ecat_hw/: ecat_hw.yaml
py2_ws/src/rc_ecat_master/config/ecat_hw/gpio/: gpio_template.yaml
py2_ws/src/rc_ecat_master/config/hw/: kobe_ecat_hw.yaml  test_ecat_hw.yaml  wujia_ecat_hw.yaml
py2_ws/src/rc_ecat_master/config/limits/: kobe_joint_limits.yaml  kobe_swerve_joint_limits.yaml  test_2006_limits.yaml  wujia_joint_limits.yaml
py2_ws/src/rc_ecat_master/config/serial_to_32/: serial_to_32_protocol.yaml
py2_ws/src/rc_ecat_master/include/rc_ecat_master/: ActuatorData.h  GpioData.h  RcEcatHardwareInterface.h  RcEcatSlave.hpp  rt_joint_state.h
py2_ws/src/rc_ecat_master/launch/: kobe_controller.launch  kobe_ecat_hw.launch  load_controller.launch  load_ctrl_hw.launch  load_ops9_controller.launch  load_simple_swerve_controller.launch  load_test_md4219_controller.launch  rc_ecat_hw.launch  rc_ecat_master.launch  test_defense.launch  test_shoot.launch  test_swerve.launch
py2_ws/src/rc_ecat_master/scripts/: kobe_ecat_hw_node.sh  rc_ecat.perspective  rc_ecat_hw_node.sh  rc_ecat_node.sh  ros_topic_monitor.py  roscore2.sh  test_controller_node.sh  test_swerve_node.sh  test_topic_monitor.sh
py2_ws/src/rc_ecat_master/src/: RcEcatHardwareInterface.cpp  RcEcatSlave.cpp  rc_ecat_hw_node.cpp  rc_ecat_node.cpp  rt_joint_state.cpp
py2_ws/src/rc_ecat_master/src/ecat_hardware_interface/gpio/: GpioResourceManager.cpp
py2_ws/src/rc_ecat_master/src/ecat_hardware_interface/position/: PositionResourceManager.cpp
py2_ws/src/ros_ecat_msgs/: CMakeLists.txt  package.xml
py2_ws/src/ros_ecat_msgs/msg/: ActionData.msg  DJIEcatRosCommands.msg  DJIEcatRosMsg.msg  InitState.msg  Ops9Command.msg  PboxMsg.msg  PositionSensorCmd.msg  PositionSensorMsg.msg  RemoteState.msg  UpperBoardCmd.msg  VescEcatRosCommands.msg  VescEcatRosMsg.msg
py2_ws/src/serial_manager/: CMakeLists.txt  package.xml
py2_ws/src/serial_manager/config/: protocol.yaml
py2_ws/src/serial_manager/include/serial_manager/: SerialManager.h
py2_ws/src/serial_manager/launch/: serial_test_node.launch
py2_ws/src/serial_manager/src/: SerialManager.cpp  serial_test_node.cpp
py2_ws/src/upperboard_app/: CMakeLists.txt  package.xml
py2_ws/src/upperboard_app/launch/: upperboard_app_node.launch
py2_ws/src/upperboard_app/src/: upperboard_app_node.cpp
study_record/: 时光机.md
zlkc_ws/src/jhcap_camera-master/: CMakeLists.txt  package.xml
zlkc_ws/src/jhcap_camera-master/launch/: camera.launch
zlkc_ws/src/jhcap_camera-master/src/: jhcap_camera.cpp
(+226 files in other folders)
