<?xml version="1.0"?>
<package format="2">
  <name>localization_interface</name>
  <version>0.0.0</version>
  <description>The localization_interface package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="keten@todo.todo">keten</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>any_node</depend>
  <depend>any_worker</depend>
  <depend>signal_handler</depend>
  <depend>tf2</depend>
  <depend>ros_ecat_msgs</depend>
  <depend>tf2_ros</depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <depend>geometry_msgs</depend>
  <depend>ops9_controller</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
