<?xml version="1.0"?>
<package format="2">
  <name>rc_ecat_master</name>
  <version>0.0.0</version>
  <description>The rc_ecat_master package</description>


  <maintainer email="keten@todo.todo">keten</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>any_node</depend>
  <depend>any_worker</depend>
  <depend>message_logger</depend>
  <depend>param_io</depend>
  <depend>roscpp</depend>
  <depend>signal_handler</depend>
  <depend>soem_interface_rsl</depend>
  <depend>soem_rsl</depend>
  <depend>rosconsole</depend>
  <depend>controller_manager</depend>
  <depend>ros_ecat_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>serial_manager</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
