<?xml version="1.0"?>
<package format="2">
  <name>serial_manager</name>
  <version>0.0.0</version>
  <description>The serial_manager package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="keten@todo.todo">keten</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>any_node</build_depend>
  <build_depend>any_worker</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>signal_handler</build_depend>
  <build_export_depend>any_node</build_export_depend>
  <build_export_depend>any_worker</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>signal_handler</build_export_depend>
  <exec_depend>any_node</exec_depend>
  <exec_depend>any_worker</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>signal_handler</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
