<?xml version="1.0"?>
<package format="2">
  <name>jhcap_camera</name>
  <version>1.0.0</version>
  <description>ROS driver for JingHang Electronics cameras with image and compressed image publishing</description>

  <!-- Maintainer info -->
  <maintainer email="user@example.com">Your Name</maintainer>

  <!-- License -->
  <license>BSD</license>

  <!-- URLs -->
  <url type="website">http://wiki.ros.org/jhcap_camera</url>
  <url type="bugtracker">https://github.com/your_username/jhcap_camera/issues</url>
  <url type="repository">https://github.com/your_username/jhcap_camera</url>

  <!-- Author -->
  <author email="user@example.com">Your Name</author>

  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>camera_info_manager</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>