<?xml version="1.0"?>
<package format="2">
  <name>chassis_controller</name>
  <version>0.0.0</version>
  <description>The chassis_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="keten@todo.todo">keten</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>roslint</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>any_node</depend>
  <depend>effort_controllers</depend>
  <depend>nav_msgs</depend>
  <depend>ros_ecat_mags</depend>
  <depend>vision_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/omni_chassis_controller_plugins.xml"/>
    <controller_interface plugin="${prefix}/swerve_chassis_controller_plugins.xml"/>
    <controller_interface plugin="${prefix}/wujia_plugins.xml"/>
  </export>
</package>
