<?xml version="1.0"?>
<package format="2">
  <name>ops9_controller</name>
  <version>0.0.0</version>
  <description>The ops9_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="keten@todo.todo">keten</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>any_node</build_depend>
  <build_depend>any_worker</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_export_depend>any_node</build_export_depend>
  <build_export_depend>any_worker</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslint</build_export_depend>
  <exec_depend>any_node</exec_depend>
  <exec_depend>any_worker</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslint</exec_depend>
  <depend>rc_ecat_master</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/ops9_controller_plugins.xml"/>
  </export>
</package>
